--- a/PowerBot.nuspec
+++ b/PowerBot.nuspec
@@ -2,14 +2,14 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>PowerBot</id>
-    <version>3.4</version>
+    <version>3.6</version>
     <authors>Joel Bennett</authors>
-    <owners>Http://HuddledMasses.org</owners>
+    <owners>http://HuddledMasses.org</owners>
     <description>PowerBot: the PowerShell IRC Bot</description>
     <copyright>(c) 2014, Joel Bennett</copyright>
     <tags>PowerShell Module</tags>
     <dependencies>
-      <dependency id="WebQueries" />
+      <dependency id="ResolveAlias" />
     </dependencies>
   </metadata>
 </package>
